my-apps/utility/fizzy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fizzy
  namespace: fizzy
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: fizzy
